--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -13,7 +13,7 @@
             <input
               type="text"
               class="form-control form-control-lg"
-              formControlName="name"
+              formControlName="username"
             />
             <div *ngIf="form.invalid" class="text-warning form-text">This field is required</div>
           </div>
