--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<div class="container pt-4 text-end">
+  <a href="https://github.com/rodionsibov/animated-palm-tree" title="GitHub"
+    ><i class="fab fa-github fa-2xl"></i
+  ></a>
+</div>
 <router-outlet></router-outlet>
