--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -6,7 +6,11 @@
       <p class="text-center">
         <a [routerLink]="['/login']">Have an account?</a>
       </p>
-      <app-backend-error-messages *ngIf="backedErrors$ | async" ></app-backend-error-message> 
+      <app-backend-error-messages
+        *ngIf="backendErrors$ | async"
+        [backendErrors]="backendErrors$ | async"
+      ></app-backend-error-messages>
+
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <fieldset>
           <div class="form-group">
@@ -47,7 +51,7 @@
               *ngIf="form.get('username')?.hasError('pattern')"
               class="invalid-feedback"
             >
-            A field name cannot start with a blank space.
+              A field name cannot start with a blank space.
             </div>
           </div>
           <div class="form-group">
