--- a/src/app/shared/modules/backend-error-messages/components/backend-error-messages/backend-error-messages.component.html
+++ b/src/app/shared/modules/backend-error-messages/components/backend-error-messages/backend-error-messages.component.html
@@ -1,1 +1,5 @@
-<p>backend-error-messages works!</p>
+<ul>
+    <li *ngFor="let errorMessage of errorMessages" class="">
+        {{errorMessage}}
+    </li>
+</ul>
